--- a/wti-web/src/index.html
+++ b/wti-web/src/index.html
@@ -18,7 +18,7 @@
 <div class="container">
 
   <div class="masthead">
-    <h1 class="text-muted well">Android Web Telephony Integration (WTI)</h1>
+    <h1 class="well">Android Web Telephony Integration (WTI)</h1>
   </div>
 
   <div class="row">
@@ -79,7 +79,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <h2>
+      <h2 class="text-muted well">
         <span class="glyphicon glyphicon-book"></span>
         Phone book
       </h2>
