--- a/wti-web/src/index.html
+++ b/wti-web/src/index.html
@@ -20,10 +20,10 @@
   </div>
 
   <div class="row">
-    <div id="pairingBox" class="col-lg-3">
+    <div id="outgoingCallBox" class="col-lg-3">
       <h2>
-        <span class="glyphicon glyphicon-link"></span>
-        Pairing
+        <span class="glyphicon glyphicon-globe"></span>
+        Phone
       </h2>
 
       <p>
