fixed outgoing call handler

--- a/wti-web/src/index.html
+++ b/wti-web/src/index.html
@@ -27,7 +27,7 @@
       </h2>
 
       <p>
-        <input id="txtOutgoingNumber" type="text" placeholder="a number to call" value="">
+        <input id="txtOutgoingNumber" type="tel" name="tel" placeholder="a number to call" value="">
       </p>
       <p>
         <button id="btnCall" class="btn btn-primary">
